--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -124,7 +124,7 @@
                       src="../../../../../../assets/svg/icon_excel.svg"
                       alt=""
                     />
-                    <span class="text-sm text-gray-600 dark:text-neutral-400">{{
+                    <span class="text-sm text-gray-600 ">{{
                       item.descripcion
                     }}</span>
                   </div>
@@ -139,7 +139,7 @@
                       />
                       <div class="grow">
                         <span
-                          class="text-sm text-gray-600 dark:text-neutral-400"
+                          class="text-sm text-gray-600 "
                           >{{ item.usuariocreacion.toUpperCase() }}</span
                         >
                       </div>
