--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -1,7 +1,7 @@
 <header-table />
 
-<table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-  <thead class="bg-gray-50 dark:bg-neutral-900">
+<table class="min-w-full divide-y divide-gray-200">
+  <thead class="bg-gray-50 ">
     <tr>
       <th scope="col" class="px-6 py-3 text-start">
         <header-table-title [title]="'rucempresa'" />
@@ -19,9 +19,10 @@
     </tr>
   </thead>
 
-  <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-    @for (item of DatosEmpresas; track $index) {
-      <tr class="bg-white hover:bg-gray-50 dark:bg-neutral-900 dark:hover:bg-neutral-800">
+  <tbody class="divide-y divide-gray-200 ">
+    @for (item of DatosEmpresas | paginate: { itemsPerPage:
+    itemsPerPage, currentPage: p }; track $index) {
+      <tr class="bg-white hover:bg-gray-50 dark:bg-neutral-900 ">
         <td class="size-px whitespace-nowrap">
           <body-table-button [text]="item.rucempresa"/>
         </td>
@@ -29,7 +30,7 @@
           <body-table-button [text]="item.razonsocial"/>
         </td>
         <td class="size-px whitespace-nowrap">
-          <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+          <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
             @if (item.estado == "1") {
               <body-table-estado-activo />
             }@else {
@@ -49,7 +50,41 @@
 @if (DatosEmpresas.length == 0) {
   <message-empty-list />
 }
-<footer-table [text]="cantidadEmpresas"/>
+
+<div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200">
+  <div>
+    <p class="text-sm text-gray-600 dark:text-neutral-400">
+      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{DatosEmpresas.length}}</span> results
+    </p>
+  </div>
+
+
+<div>
+  <div class="inline-flex gap-x-2">
+    <div class="input-group mb-2">
+      <div class="dropdown mr-4">
+        <select
+          class="form-select"
+          (change)="onItemsPerPageChange($event)"
+          aria-label="Default select example"
+        >
+          <option value="" disabled selected>Ítems</option>
+          <option value="5">5</option>
+          <option selected value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+        </select>
+      </div>
+      <div class="flex items-center justify-center">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
 
 <footer-general />
 
