--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -66,7 +66,7 @@
       aria-label="Close"
     ></button>
   </div>
-  <div class="offcanvas-body">
+  <div class="offcanvas-body flex flex-col gap-3  items-start">
     <!-- ================================================== -->
     <!-- REPORTE - PORTADA -->
     <!-- ================================================== -->
