--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -54,7 +54,7 @@
 <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200">
   <div>
     <p class="text-sm text-gray-600 dark:text-neutral-400">
-      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{DatosEmpresas.length}}</span> results
+      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{DatosEmpresas.length}}</span> Datos totales
     </p>
   </div>
 
