--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -1,109 +1,178 @@
-  <header-table-usuarios />
-  <!-- Table -->
-  <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-    <thead class="bg-gray-50 dark:bg-neutral-900">
-      <tr>
-        <th scope="col" class="px-6 py-3 text-start">
-          <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
-              Código usuario
+<header-table-usuarios />
+<!-- Table -->
+<table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+  <thead class="bg-gray-50 dark:bg-neutral-900">
+    <tr>
+      <th scope="col" class="px-6 py-3 text-start">
+        <div class="flex items-center gap-x-2">
+          <span
+            class="text-xs font-semibold uppercase tracking-wide text-gray-800"
+          >
+            Código usuario
+          </span>
+        </div>
+      </th>
+
+      <th scope="col" class="px-6 py-3 text-start">
+        <div class="flex items-center gap-x-2">
+          <span
+            class="text-xs font-semibold uppercase tracking-wide text-gray-800"
+          >
+            Cargo
+          </span>
+        </div>
+      </th>
+
+      <th scope="col" class="px-6 py-3 text-start">
+        <div class="flex items-center gap-x-2">
+          <span
+            class="text-xs font-semibold uppercase tracking-wide text-gray-800"
+          >
+            Estado
+          </span>
+        </div>
+      </th>
+
+      <th scope="col" class="px-6 py-3 text-start">
+        <div class="flex items-center gap-x-2">
+          <span
+            class="text-xs font-semibold uppercase tracking-wide text-gray-800"
+          >
+            Nombres
+          </span>
+        </div>
+      </th>
+
+      <th scope="col" class="px-6 py-3 text-start">
+        <div class="flex items-center gap-x-2">
+          <span
+            class="text-xs font-semibold uppercase tracking-wide text-gray-800"
+          >
+            Apellidos
+          </span>
+        </div>
+      </th>
+
+      <!-- <th scope="col" class="px-6 py-3 text-end"></th> -->
+    </tr>
+  </thead>
+
+  <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+    @for (item of DatosUsuarios | paginate: { itemsPerPage: itemsPerPage,
+    currentPage: p }; track $index) {
+    <tr class="bg-white hover:bg-gray-50">
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+        >
+          <span class="block px-6 py-2">
+            <span class="font-mono text-sm text-blue-600">{{
+              item.idusuario
+            }}</span>
+          </span>
+        </button>
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+        >
+          <span class="block px-6 py-2">
+            <span class="text-sm text-gray-600 dark:text-neutral-400">{{
+              item.cargo
+            }}</span>
+          </span>
+        </button>
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+        >
+          @if (item.estado == "1") {
+          <span class="block px-6 py-2">
+            <span
+              class="py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-teal-100 text-teal-800 rounded-full dark:bg-teal-500/10 dark:text-teal-500"
+            >
+              <svg
+                class="size-2.5"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+                />
+              </svg>
+              Activo
             </span>
-          </div>
-        </th>
-
-        <th scope="col" class="px-6 py-3 text-start">
-          <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
-              Cargo
+          </span>
+          }@else {
+          <span class="block px-6 py-2">
+            <span
+              class="inline-flex items-center gap-1.5 py-0.5 px-2 rounded-full text-xs font-medium bg-red-100 text-red-800 dark:bg-red-900 dark:text-green-200"
+            >
+              <svg
+                class="size-2.5"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"
+                />
+              </svg>
+              Inactivo
             </span>
-          </div>
-        </th>
-
-        <th scope="col" class="px-6 py-3 text-start">
-          <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
-              Estado
-            </span>
-          </div>
-        </th>
-
-        <th scope="col" class="px-6 py-3 text-start">
-          <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
-              Nombres
-            </span>
-          </div>
-        </th>
-
-        <th scope="col" class="px-6 py-3 text-start">
-          <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800">
-              Apellidos
-            </span>
-          </div>
-        </th>
-
-        <!-- <th scope="col" class="px-6 py-3 text-end"></th> -->
-      </tr>
-    </thead>
-
-    <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-
-      @for (item of DatosUsuarios; track $index) {
-        <tr class="bg-white hover:bg-gray-50 ">
-          <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
-              <span class="block px-6 py-2">
-                <span class="font-mono text-sm text-blue-600 ">{{item.idusuario}}</span>
-              </span>
-            </button>
-          </td>
-          <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
-              <span class="block px-6 py-2">
-                <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.cargo}}</span>
-              </span>
-            </button>
-          </td>
-          <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
-              @if (item.estado == "1") {
-                <span class="block px-6 py-2">
-                  <span class="py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-teal-100 text-teal-800 rounded-full dark:bg-teal-500/10 dark:text-teal-500">
-                    <svg class="size-2.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                    </svg>
-                    Activo
-                  </span>
-                </span>
-              }@else {
-                <span class="block px-6 py-2">
-                  <span class="inline-flex items-center gap-1.5 py-0.5 px-2 rounded-full text-xs font-medium bg-red-100 text-red-800 dark:bg-red-900 dark:text-green-200">
-                    <svg class="size-2.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
-                    </svg>
-                    Inactivo
-                  </span>
-                </span>
-              }
-
-            </button>
-          </td>
-          <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
-              <span class="block px-6 py-2">
-                <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.nombreusuario}}</span>
-              </span>
-            </button>
-          </td>
-          <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
-              <span class="block px-6 py-2">
-                <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.apellido}}</span>
-              </span>
-            </button>
-          </td>
-          <!-- <td class="size-px whitespace-nowrap">
+          </span>
+          }
+        </button>
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+        >
+          <span class="block px-6 py-2">
+            <span class="text-sm text-gray-600 dark:text-neutral-400">{{
+              item.nombreusuario
+            }}</span>
+          </span>
+        </button>
+      </td>
+      <td class="size-px whitespace-nowrap">
+        <button
+          type="button"
+          class="block"
+          aria-haspopup="dialog"
+          aria-expanded="false"
+          aria-controls="hs-ai-invoice-modal"
+        >
+          <span class="block px-6 py-2">
+            <span class="text-sm text-gray-600 dark:text-neutral-400">{{
+              item.apellido
+            }}</span>
+          </span>
+        </button>
+      </td>
+      <!-- <td class="size-px whitespace-nowrap">
             <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
               <span class="px-6 py-1.5">
                 <span class="py-1 px-2 inline-flex justify-center items-center gap-2 rounded-lg border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:hover:text-white dark:focus:ring-offset-gray-800">
@@ -116,39 +185,51 @@
               </span>
             </button>
           </td> -->
-        </tr>
-      }
-    </tbody>
-  </table>
-  <!-- End Table -->
+    </tr>
+    }
+  </tbody>
+</table>
+<!-- End Table -->
 
-  <!-- Footer -->
-  <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700">
-    <div>
-      <p class="text-sm text-gray-600 dark:text-neutral-400">
-        <span class="font-semibold text-gray-800 ">{{DatosUsuarios.length}}</span> Registros
-      </p>
-    </div>
+<div
+  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200"
+>
+  <div>
+    <p class="text-sm text-gray-600 dark:text-neutral-400">
+      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{
+        DatosUsuarios.length
+      }}</span>
+      Datos totales
+    </p>
+  </div>
 
-    <div>
-      <div class="inline-flex gap-x-2">
-        <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700">
-          <svg class="size-3" width="16" height="16" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10.506 1.64001L4.85953 7.28646C4.66427 7.48172 4.66427 7.79831 4.85953 7.99357L10.506 13.64" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          </svg>
-          Prev
-        </button>
-
-        <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700">
-          Next
-          <svg class="size-3" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M4.50598 2L10.1524 7.64645C10.3477 7.84171 10.3477 8.15829 10.1524 8.35355L4.50598 14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          </svg>
-        </button>
+  <div>
+    <div class="inline-flex gap-x-2">
+      <div class="input-group mb-2">
+        <div class="dropdown mr-4">
+          <select
+            class="form-select"
+            (change)="onItemsPerPageChange($event)"
+            aria-label="Default select example"
+          >
+            <option value="" disabled selected>Ítems</option>
+            <option value="5">5</option>
+            <option selected value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+          </select>
+        </div>
+        <div class="flex items-center justify-center">
+          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        </div>
       </div>
     </div>
   </div>
-  <!-- End Footer -->
-  <footer-general />
+</div>
 
-  <detalle-usuario-page />
+
+
+<!-- End Footer -->
+<footer-general />
+
+<detalle-usuario-page />
