12_02_2025 BUSCAR EN PÁGINA CARGAR INVENTARIO TOUPPERCASE

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -20,7 +20,7 @@
     <tr>
 
       <td class="size-px whitespace-nowrap">
-        <td-table-descripcion [descripcion]="item.descripcion" />
+        <td-table-descripcion [descripcion]="item.descripcion.toUpperCase()" />
       </td>
       <td class="size-px whitespace-nowrap">
         <td-table-usuario-creador
