12_02_2025 COLOR TITULO LOGIN PARA DARK ARREGLADO

--- a/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
@@ -1,9 +1,9 @@
 <div class="p-4 sm:p-7">
   <div class="text-center">
-    <h1 class="block text-2xl font-bold text-gray-800 dark:text-white">
+    <h1 class="block text-2xl font-bold text-gray-800">
       Login
     </h1>
-    <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
+    <p class="mt-2 text-sm text-gray-600">
       Ingresa a tu sistema de control de inventario
     </p>
   </div>
