--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -70,7 +70,7 @@
           <table
             class="min-w-full border divide-y divide-gray-200 "
           >
-            <thead class="bg-gray-50 dark:bg-neutral-900">
+            <thead class="bg-gray-50 ">
               <tr>
                 <th scope="col" class="px-6 py-3 text-start">
                   <div class="flex items-center gap-x-2">
@@ -115,7 +115,7 @@
               </tr>
             </thead>
 
-            <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+            <tbody class="divide-y divide-gray-200 ">
               @for (item of datosInventarioslista | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; track $index) {
               <tr>
                 <td class="size-px whitespace-nowrap">
