--- a/src/app/Ui/Shared/feactures/asignarUsuario/table-asignar/th-table-asignar/th-table-asignar.component.html
+++ b/src/app/Ui/Shared/feactures/asignarUsuario/table-asignar/th-table-asignar/th-table-asignar.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center gap-x-2">
   <span
-    class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+    class="text-xs font-semibold uppercase tracking-wide text-gray-800"
   >
     {{ descripcion }}
   </span>
