13_02_2025 COLOR DE DARK ELIMINADOS EN LAS TABLAS

--- a/src/app/Ui/Modules/configuration/Empresas/components/header/body-table/body-table-button/body-table-button.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/header/body-table/body-table-button/body-table-button.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#modal-detalle-empresas">
   <span class="block px-6 py-2">
-    <span class="text-sm text-gray-600 dark:text-neutral-400">{{text}}</span>
+    <span class="text-sm text-gray-600">{{text}}</span>
   </span>
 </button>
