--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,5 +1,5 @@
 <table class="min-w-full divide-y divide-gray-200 ">
-  <thead class="bg-gray-50 dark:bg-neutral-900">
+  <thead class="bg-gray-50 ">
     <tr>
       @for (item of encabezadoTable; track $index) {
       <th scope="col" class="px-6 py-3 text-start">
