--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -22,7 +22,7 @@
   <tbody class="divide-y divide-gray-200 ">
     @for (item of DatosEmpresas | paginate: { itemsPerPage:
     itemsPerPage, currentPage: p }; track $index) {
-      <tr class="bg-white hover:bg-gray-50 dark:bg-neutral-900 ">
+      <tr class="bg-white hover:bg-gray-50  ">
         <td class="size-px whitespace-nowrap">
           <body-table-button [text]="item.rucempresa"/>
         </td>
