--- a/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-table-fecha/td-table-fecha.component.html
+++ b/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-table-fecha/td-table-fecha.component.html
@@ -1,5 +1,5 @@
 <div class="px-6 py-3">
-  <span class="text-sm text-gray-600 dark:text-neutral-400">{{
+  <span class="text-sm text-gray-600 ">{{
     descripcion
   }}</span>
 </div>
