--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -3,7 +3,7 @@
 <mensaje-error-tabla-datos-asignar (recargar)="recargarPagina()" />
 }@else {
 <table class="min-w-full divide-y divide-gray-200">
-  <thead class="bg-gray-50 dark:bg-neutral-900">
+  <thead class="bg-gray-50 ">
     <tr>
       <th scope="col" class="px-6 py-3 text-start">
         <th-table-asignar [descripcion]="'Descripcion'" />
