--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
@@ -3,12 +3,12 @@
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="Rol">
-      <th mat-header-cell *matHeaderCellDef> Rol </th>
+      <th mat-header-cell *matHeaderCellDef class="mat-primary"> Rol </th>
       <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Estado">
-      <th mat-header-cell *matHeaderCellDef> Estado </th>
+      <th mat-header-cell *matHeaderCellDef class="mat-accent" > Estado </th>
       <td mat-cell *matCellDef="let element"> @if (element.estado == '1') { Activo } @else {Inactivo} </td>
     </ng-container>
 
