--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -1,5 +1,5 @@
 <!-- ========== HEADER ========== -->
-<header
+<!-- <header
   class="sticky top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white border-b text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700"
 >
   <nav class="px-4 sm:px-6 flex basis-full items-center w-full mx-auto">
@@ -28,49 +28,6 @@
       </div>
 
       <div class="flex flex-row items-center justify-end gap-1">
-        <button
-          type="button"
-          class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none"
-        >
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9" />
-            <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0" />
-          </svg>
-          <span class="sr-only">Notifications</span>
-        </button>
-
-        <button
-          type="button"
-          class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none"
-        >
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M22 12h-4l-3 9L9 3l-3 9H2" />
-          </svg>
-          <span class="sr-only">Activity</span>
-        </button>
-
         <div
           class="hs-dropdown [--placement:bottom-right] relative inline-flex"
         >
@@ -200,7 +157,7 @@
       </div>
     </div>
   </nav>
-</header>
+</header> -->
 
 <div class="w-full lg:ps-64">
   <div class="w-full lg:ps-0 bg-fondo-datos">
@@ -216,7 +173,7 @@
                   class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
                 >
                   <header-page />
-                  <lista-inventarios-cargados [dataListaInventarios]="datosFiltrados" />
+                  <lista-inventarios-cargados [dataListaInventarios]="datosInventarioslista" />
                 </div>
               </div>
             </div>
