--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -58,6 +58,7 @@
                     class="upload-label dark"
                   >
                     <input
+                      #fileInput
                       (change)="onFileSelected($event)"
                       id="af-submit-app-upload-images"
                       name="af-submit-app-upload-images"
