--- a/src/app/Ui/Modules/configuration/Empresas/components/header/body-table/body-table-button/body-table-button.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/header/body-table/body-table-button/body-table-button.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#modal-detalle-empresas">
+<button type="button" class="block" aria-haspopup="dialog" aria-expanded="false">
   <span class="block px-6 py-2">
     <span class="text-sm text-gray-600">{{text}}</span>
   </span>
