--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -30,7 +30,7 @@
           <body-table-button [text]="item.razonsocial"/>
         </td>
         <td class="size-px whitespace-nowrap">
-          <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
+          <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" >
             @if (item.estado == "1") {
               <body-table-estado-activo />
             }@else {
