--- a/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
@@ -17,12 +17,13 @@
             Emp<span class="text-[#00D1AE]">resa</span>
           </h2>
 
-          <p class="mt-4 text-sm text-gray-100 dark:text-neutral-400">
+          <p class="mt-4 text-sm text-gray-100">
             Ingresa los datos necesarios para la nueva empresa a gestionar
           </p>
         </div>
 
         <button
+         (click)="onCancel()"
           type="button"
           class="btn-close"
           data-bs-dismiss="modal"
@@ -35,27 +36,10 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-full-name"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
               >
                 Ruc
               </label>
-              <div class="hs-tooltip inline-block">
-                <svg
-                  class="hs-tooltip-toggle ms-1 inline-block size-3 text-gray-400 dark:text-neutral-600"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
-                  />
-                  <path
-                    d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
-                  />
-                </svg>
-              </div>
             </div>
             <!-- End Col -->
 
@@ -66,7 +50,7 @@
                   [(ngModel)]="Empresa.rucempresa"
                   id="af-account-full-name"
                   type="text"
-                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
                   placeholder="Ejemplo 10578543683"
                 />
               </div>
@@ -76,7 +60,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
               >
                 Razón social
               </label>
@@ -89,7 +73,7 @@
                 [(ngModel)]="Empresa.razonsocial"
                 id="af-account-email"
                 type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="ejemplo Mi empresa SAC"
               />
             </div>
@@ -99,7 +83,7 @@
               <div class="inline-block">
                 <label
                   for="af-account-phone"
-                  class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                  class="inline-block text-sm text-gray-800 mt-2.5 "
                 >
                   Teléfono
                 </label>
@@ -114,7 +98,7 @@
                   [(ngModel)]="Empresa.telefono"
                   id="af-account-phone"
                   type="text"
-                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
                   placeholder="+x(xxx)xxx-xx-xx"
                 />
               </div>
@@ -123,7 +107,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
               >
                 Dirección
               </label>
@@ -136,7 +120,7 @@
                 [(ngModel)]="Empresa.direccion"
                 id="af-account-email"
                 type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="ejemplo av San Agustin #289"
               />
             </div>
@@ -148,6 +132,7 @@
               type="button"
               class="btn btn-secondary"
               data-bs-dismiss="modal"
+              (click)="onCancel()"
             >
               Close
             </button>
