--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,7 +1,12 @@
 <table mat-table [dataSource]="dataSource" matSort>
   <!-- Descripción -->
   <ng-container matColumnDef="descripcion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <mat-form-field class="w-full pt-3 pl-3 pr-3 overflow-hidden">
+        <mat-label>Descripción</mat-label>
+        <input matInput [formControl]="formularioFiltros.controls.descripcion" (keyup)="applyFilters()">
+      </mat-form-field>
+    </th>
     <td mat-cell *matCellDef="let row">
       <button class="px-6 py-3 flex gap-2 align-center">
         <img src="../../../../../../assets/svg/icon_excel.svg" alt="" />
@@ -14,7 +19,12 @@
 
   <!-- Usuario -->
   <ng-container matColumnDef="usuariocreacion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <mat-form-field class="w-full pt-3 pl-3 pr-3 overflow-hidden">
+        <mat-label>Usuario creador</mat-label>
+        <input matInput [formControl]="formularioFiltros.controls.usuariocreacion" (keyup)="applyFilters()">
+      </mat-form-field>
+    </th>
     <td mat-cell *matCellDef="let row">
       <button class="px-6 py-3 flex gap-2 align-center">
         <img src="../../../../../../assets/svg/icon-users.svg" alt="" />
