--- a/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
@@ -138,6 +138,7 @@
             </button>
             <button
             type="submit"
+            [disabled]="!formularioRegistro.valid"
             class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
           >
             Guardar
