--- a/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
@@ -178,6 +178,7 @@
 
             <div class="sm:col-span-9">
               <input
+                [disabled]="!formularioRegistro.valid"
                 [(ngModel)]="usuario.contrasenia"
                 formControlName="contraseniaUsuario"
                 id="af-account-email"
@@ -193,6 +194,14 @@
           <div class="modal-footer mt-3">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             <button
+            [disabled]="
+                      !formularioRegistro.controls['rucEmpresa'].valid ||
+                      !formularioRegistro.controls['idUsuario'].valid ||
+                      !formularioRegistro.controls['nombreUsuario'].valid ||
+                      !formularioRegistro.controls['apellidoUsuario'].valid ||
+                      !formularioRegistro.controls['rolUsuario'].valid ||
+                      !formularioRegistro.controls['contraseniaUsuario'].valid 
+                    "
               type="submit"
               class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
             >
