--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -47,7 +47,7 @@
         >
         <div class="flex items-center gap-x-2">
           <span class="block text-sm font-medium text-gray-800">{{
-            citaSeleccionada.fechacarga
+            citaSeleccionada.fechacreacion
           }}</span>
         </div>
       </div>
